--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <script src="https://fb.me/react-15.1.0.js"></script>
     <script src="https://fb.me/react-dom-15.1.0.js"></script>
+    <script src="/bundle.js" ></script> 
 
 </body>
 </html>
