--- a/index.html
+++ b/index.html
@@ -1,22 +1,47 @@
+<!DOCTYPE html>
+<html lang="en">
 
-
-<!doctype html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Ranjith React Sample App</title>
+  <title>React Starter App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" href="css/style.css" media="screen">
 
-  <link type="stylesheet" href="css/bootstrap.css">
 </head>
+
 <body>
 
-    <div class="container">
-      <div id="container" class="col-md-8 col-md-offset-2">  </div>
-    </div>  
+  <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+      aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+    <a class="navbar-brand" href="#">React Starter</a>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Features</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Pricing</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
-    <script src="https://fb.me/react-15.1.0.js"></script>
-    <script src="https://fb.me/react-dom-15.1.0.js"></script>
-    <script src="/bundle.js" ></script> 
 
+  <div class="container">
+    <div id="mount"></div>
+    <Counter/>
+
+    <ShoppingList name="Mark" />
+  </div>
+
+  <script src="/bundle.js"></script>
 </body>
+
 </html>
